<resources>
    <string name="app_name">YetiCup</string>
    <string name="ru_app_name">Кубок Йети</string>
    <string name="start_button">Перейти к событию</string>
    <string name="login1">Логин</string>
    <string name="password">Ключ</string>
    <string name="login">Логином является ваш номер телефона</string>
    <string name="key">Ключом является ваш пароль</string>
    <string name="go_in1">Администратор</string>
    <string name="go_in2">Участник</string>
    <string name="profile">Профиль участника</string>
    <string name="news">Лента новостей</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>